tests/neg-custom-args/captures/existential-mapping.check
-- Error: tests/neg-custom-args/captures/existential-mapping.scala:46:10 -----------------------------------------------
46 |  val z2: (x: A^) => Array[C^] = ??? // error
   |          ^^^^^^^^^^^^^^^^^^^^
   |          Array[box C^] captures the root capability `cap` in invariant position.
   |          This capability cannot be converted to an existential in the result type of a function.
   |
   |          where:    ^ refers to the universal root capability
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/existential-mapping.scala:9:25 ---------------------------
9 |  val _:  (x: C^) -> C = x1 // error
  |                         ^^
  |                         Found:    (x1 : (x: C^) -> C^²)
  |                         Required: (x: C^) -> C
  |
  |                         where:    ^  refers to the universal root capability
  |                                   ^² refers to a root capability associated with the result type of (x: C^): C^²
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/existential-mapping.scala:12:20 --------------------------
12 |  val _:  C^ -> C = x2 // error
   |                    ^^
   |                    Found:    (x2 : C^ -> C^²)
   |                    Required: C^ -> C
   |
   |                    where:    ^  refers to the universal root capability
   |                              ^² refers to a fresh root capability created in value x2
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/existential-mapping.scala:15:30 --------------------------
15 |  val _: A^ -> (x: C^) -> C = x3 // error
   |                              ^^
   |                        Found:    (x3 : A^ -> (x: C^) -> C^²)
   |                        Required: A^ -> (x: C^) -> C
   |
   |                        where:    ^  refers to the universal root capability
   |                                  ^² refers to a root capability associated with the result type of (x: C^): C^²
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/existential-mapping.scala:18:25 --------------------------
18 |  val _: A^ -> C^ -> C = x4 // error
   |                         ^^
   |                         Found:    (x4 : A^ -> C^ -> C^²)
   |                         Required: A^ -> C^ -> C
   |
   |                         where:    ^  refers to the universal root capability
   |                                   ^² refers to a fresh root capability created in value x4
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/existential-mapping.scala:21:30 --------------------------
21 |  val _: A^ -> (x: C^) -> C = x5 // error
   |                              ^^
   |                        Found:    (x5 : A^ -> (x: C^) -> C^²)
   |                        Required: A^ -> (x: C^) -> C
   |
   |                        where:    ^  refers to the universal root capability
   |                                  ^² refers to a root capability associated with the result type of (x: C^): C^²
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/existential-mapping.scala:24:30 --------------------------
24 |  val _: A^ -> (x: C^) => C = x6 // error
   |                              ^^
   |                       Found:    (x6 : A^ -> (x: C^) => C^²)
   |                       Required: A^ -> (x: C^) =>² C
   |
   |                       where:    =>  refers to a fresh root capability created in value x6
   |                                 =>² refers to a fresh root capability created in method Test
   |                                 ^   refers to the universal root capability
   |                                 ^²  refers to a root capability associated with the result type of (x: C^): C^²
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/existential-mapping.scala:27:25 --------------------------
27 |  val _:  (x: C^) => C = y1 // error
   |                         ^^
   |                       Found:    (y1 : (x: C^) => C^²)
   |                       Required: (x: C^) =>² C
   |
   |                       where:    =>  refers to a fresh root capability created in value y1
   |                                 =>² refers to a fresh root capability created in method Test
   |                                 ^   refers to the universal root capability
   |                                 ^²  refers to a root capability associated with the result type of (x: C^): C^²
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/existential-mapping.scala:30:20 --------------------------
30 |  val _:  C^ => C = y2 // error
   |                    ^^
   |                    Found:    (y2 : C^ => C^²)
   |                    Required: C^ =>² C
   |
   |                    where:    =>  refers to a fresh root capability created in value y2
   |                              =>² refers to a fresh root capability created in method Test
   |                              ^   refers to the universal root capability
   |                              ^²  refers to a fresh root capability created in value y2
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/existential-mapping.scala:33:30 --------------------------
33 |  val _: A^ => (x: C^) => C = y3 // error
   |                              ^^
   |                       Found:    (y3 : A^ => (x: C^) =>² C^²)
   |                       Required: A^ =>³ (x: C^) =>⁴ C
   |
   |                       where:    =>  refers to a fresh root capability created in value y3
   |                                 =>² refers to a fresh root capability created in value y3
   |                                 =>³ refers to a fresh root capability created in method Test
   |                                 =>⁴ refers to a fresh root capability created in method Test
   |                                 ^   refers to the universal root capability
   |                                 ^²  refers to a root capability associated with the result type of (x: C^): C^²
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/existential-mapping.scala:36:25 --------------------------
36 |  val _: A^ => C^ => C = y4 // error
   |                         ^^
   |                         Found:    (y4 : A^ => C^ =>² C^²)
   |                         Required: A^ =>³ C^ =>⁴ C
   |
   |                         where:    =>  refers to a fresh root capability created in value y4
   |                                   =>² refers to a fresh root capability created in value y4
   |                                   =>³ refers to a fresh root capability created in method Test
   |                                   =>⁴ refers to a fresh root capability created in method Test
   |                                   ^   refers to the universal root capability
   |                                   ^²  refers to a fresh root capability created in value y4
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/existential-mapping.scala:39:30 --------------------------
39 |  val _: A^ => (x: C^) -> C = y5 // error
   |                              ^^
   |                       Found:    (y5 : A^ => (x: C^) -> C^²)
   |                       Required: A^ =>² (x: C^) -> C
   |
   |                       where:    =>  refers to a fresh root capability created in value y5
   |                                 =>² refers to a fresh root capability created in method Test
   |                                 ^   refers to the universal root capability
   |                                 ^²  refers to a root capability associated with the result type of (x: C^): C^²
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/existential-mapping.scala:42:30 --------------------------
42 |  val _: A^ => (x: C^) => C = y6 // error
   |                              ^^
   |                       Found:    (y6 : A^ => (x: C^) =>² C^²)
   |                       Required: A^ =>³ (x: C^) =>⁴ C
   |
   |                       where:    =>  refers to a fresh root capability created in value y6
   |                                 =>² refers to a fresh root capability created in value y6
   |                                 =>³ refers to a fresh root capability created in method Test
   |                                 =>⁴ refers to a fresh root capability created in method Test
   |                                 ^   refers to the universal root capability
   |                                 ^²  refers to a root capability associated with the result type of (x: C^): C^²
   |
   | longer explanation available when compiling with `-explain`
